--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
               class="popup__input"
               name="profile__user-name"
               value=""
+              placeholder="Имя"
+              required
             />
           </label>
 
@@ -146,6 +148,8 @@
               class="popup__input"
               name="profile__user-job"
               value=""
+              placeholder="Профессия"
+              required
             />
           </label>
           <button class="popup__submit" type="submit">Сохранить</button>
