--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
         <!-- Elements -->
         <section class="elements">
-          <ul class="elements__container">
+          <ul class="element">
             <li class="element__items">
               <img
                 src="./images/karachaevsk.jpg"
