--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         </section>
         <!-- Elements -->
         <section class="elements">
-          <ul class="element">
-            <li class="element__items">
+          <ul class="elements__container">
+            <li class="element">
               <img
                 src="./images/karachaevsk.jpg"
                 alt="полуразрущенная церковь."
@@ -57,7 +57,7 @@
                 ></button>
               </div>
             </li>
-            <li class="element__items">
+            <li class="element">
               <img
                 src="./images/Elbrus.jpg"
                 alt="гора на рассвете."
@@ -69,7 +69,7 @@
                 <button class="element__button-like" type="button"></button>
               </div>
             </li>
-            <li class="element__items">
+            <li class="element">
               <img
                 src="./images/Donbay.jpg"
                 alt="гора с заснеженной вершиной."
@@ -81,7 +81,7 @@
                 <button class="element__button-like" type="button"></button>
               </div>
             </li>
-            <li class="element__items">
+            <li class="element">
               <img
                 src="./images/Elbrus.jpg"
                 alt="гора на рассвете."
@@ -93,7 +93,7 @@
                 <button class="element__button-like" type="button"></button>
               </div>
             </li>
-            <li class="element__items">
+            <li class="element">
               <img
                 src="./images/Donbay.jpg"
                 alt="гора с заснеженной вершиной."
@@ -105,7 +105,7 @@
                 <button class="element__button-like" type="button"></button>
               </div>
             </li>
-            <li class="element__items">
+            <li class="element">
               <img
                 src="./images/karachaevsk.jpg"
                 alt="полуразрущенная церковь."
