--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <!-- <link rel="stylesheet" href="./devBlockOutline.css" /> -->
     <title>Место</title>
   </head>
   <body class="page">
     <div class="page__container">
       <header class="header">
-        <img
+        <img 
           src="./images/logo.svg"
           alt="логотип место."
-          class="header__logo"
-        />
+          class="header__logo" />
       </header>
 
       <main class="main">
@@ -27,17 +25,15 @@
               <h1 class="profile__title">Жак-Ив Кусто</h1>
               <button
                 class="profile__edit-button"
-                type="button"
-                aria-label="Изменить имя"
-              ></button>
+                type="button" 
+                aria-label="Изменить имя"></button>
             </div>
             <p class="profile__subtitle">Исследователь океана</p>
           </div>
           <button
             class="profile__add-button"
-            type="button"
-            aria-label="Добавить"
-          ></button>
+            type="button" 
+            aria-label="Добавить"></button>
         </section>
         <!-- Elements -->
         <section class="elements">
@@ -48,25 +44,23 @@
                 alt="полуразрущенная церковь."
                 class="element__photo"
               />
-
+<!-- В соотвествии со стайл-гайдом практикума перносит следует только длинные строки 
+"Переносите длинные строки в HTML
+Хотя в языке HTML нет рекомендации, ограничивающей длину строк, длинные строки стоит разбивать — такой код станет проще читать.
+" -->
               <div class="element__caption">
                 <h2 class="element__caption-text">Карачаевск</h2>
+                <button class="element__button-like" type="button"></button>
+              </div>
+            </li>
+            <li class="element">
+              <img src="./images/Elbrus.jpg" alt="гора на рассвете." class="element__photo" />
+
+              <div class="element__caption">
+                <h2 class="element__caption-text">Гора Эльбрус</h2>
                 <button
-                  class="element__button-like element__button-like_active"
-                  type="button"
-                ></button>
-              </div>
-            </li>
-            <li class="element">
-              <img
-                src="./images/Elbrus.jpg"
-                alt="гора на рассвете."
-                class="element__photo"
-              />
-
-              <div class="element__caption">
-                <h2 class="element__caption-text">Гора Эльбрус</h2>
-                <button class="element__button-like" type="button"></button>
+                  class="element__button-like"
+                  type="button"></button>
               </div>
             </li>
             <li class="element">
@@ -78,19 +72,22 @@
 
               <div class="element__caption">
                 <h2 class="element__caption-text">Домбай</h2>
-                <button class="element__button-like" type="button"></button>
+                <button
+                  class="element__button-like"
+                  type="button"></button>
               </div>
             </li>
             <li class="element">
               <img
                 src="./images/Elbrus.jpg"
                 alt="гора на рассвете."
-                class="element__photo"
-              />
+                class="element__photo" />
 
               <div class="element__caption">
                 <h2 class="element__caption-text">Гора Эльбрус</h2>
-                <button class="element__button-like" type="button"></button>
+                <button
+                  class="element__button-like"
+                  type="button"></button>
               </div>
             </li>
             <li class="element">
@@ -102,7 +99,9 @@
 
               <div class="element__caption">
                 <h2 class="element__caption-text">Домбай</h2>
-                <button class="element__button-like" type="button"></button>
+                <button 
+                  class="element__button-like" 
+                  type="button"></button>
               </div>
             </li>
             <li class="element">
@@ -114,7 +113,9 @@
 
               <div class="element__caption">
                 <h2 class="element__caption-text">Карачаево-Черкесия</h2>
-                <button class="element__button-like" type="button"></button>
+                <button
+                  class="element__button-like"
+                  type="button"></button>
               </div>
             </li>
           </ul>
@@ -125,7 +126,7 @@
       </footer>
     </div>
     <!-- pop-up -->
-    <section class="popup">
+    <div class="popup">
       <div class="popup__container">
         <button class="popup__close-icon" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
@@ -134,7 +135,7 @@
           <label class="popup__label-input">
             <input
               type="text"
-              class="popup__input"
+              class="popup__input popup__input_type_name"
               name="profile__user-name"
               value=""
               placeholder="Имя"
@@ -145,17 +146,19 @@
           <label class="popup__label-input">
             <input
               type="text"
-              class="popup__input"
+              class="popup__input popup__input_type_job"
               name="profile__user-job"
               value=""
               placeholder="Профессия"
               required
             />
           </label>
-          <button class="popup__submit" type="submit">Сохранить</button>
+          <button 
+            class="popup__submit"
+            type="submit">Сохранить</button>
         </form>
       </div>
-    </section>
+    </div>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
