--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <ul class="elements__container">
             <template class="template__element">
               <li class="element">
-                <img src="" alt="" class="element__photo" />
+                <img src="#" alt="#" class="element__photo" />
                 <button class="element__trash" type="button" aria-label="Удалить"></button>
                 <div class="element__caption">
                   <h2 class="element__caption-text"></h2>
@@ -114,7 +114,7 @@
     <div class="popup popup_name_resize">
       <figure class="popup__image-box">
         <button class="popup__close-icon popup__close-icon_name_resize" type="button"></button>
-        <img src="" alt="" class="popup__image" />
+        <img src="#" alt="#" class="popup__image" />
         <figcaption class="popup__image-text"></figcaption>
       </figure>
     </div>
