--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
               <input
                 type="text"
                 class="popup__input popup__input_type_name"
-                name="profile__name"
+                name="popup__name"
                 value=""
                 placeholder="Имя"
                 minlength="2"
                 maxlength="40"
                 required
               />
-              <span class="popup__input-error profile__name-error"></span>
+              <span class="popup__input-error popup__name-error"></span>
             </label>
 
             <label class="popup__label-input">
               <input
                 type="text"
                 class="popup__input popup__input_type_job"
-                name="profile__job"
+                name="popup__job"
                 value=""
                 placeholder="Профессия"
                 minlength="2"
                 maxlength="200"
                 required
               />
-              <span class="popup__input-error profile__job-error"></span>
+              <span class="popup__input-error popup__job-error"></span>
             </label>
             <button class="popup__submit" type="submit">Сохранить</button>
           </fieldset>
