--- a/index.html
+++ b/index.html
@@ -28,18 +28,7 @@
         </section>
         <!-- Elements -->
         <section class="elements">
-          <ul class="elements__container">
-            <template class="template__element">
-              <li class="element">
-                <img src="#" alt="#" class="element__photo" />
-                <button class="element__trash" type="button" aria-label="Удалить"></button>
-                <div class="element__caption">
-                  <h2 class="element__caption-text"></h2>
-                  <button class="element__button-like" type="button"></button>
-                </div>
-              </li>
-            </template>
-          </ul>
+          <ul class="elements__container"></ul>
         </section>
       </main>
       <footer class="footer">
@@ -138,6 +127,17 @@
         <figcaption class="popup__image-text"></figcaption>
       </figure>
     </div>
+    <template id="template__element">
+      <li class="element">
+        <img src="#" alt="#" class="element__photo" />
+        <button class="element__trash" type="button" aria-label="Удалить"></button>
+        <div class="element__caption">
+          <h2 class="element__caption-text"></h2>
+          <button class="element__button-like" type="button"></button>
+        </div>
+      </li>
+    </template>
+    <script src="./scripts/cards.js"></script>
     <script src="./scripts/index.js"></script>
     <script src="./scripts/validate.js"></script>
   </body>
