--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./pages/index.css" />
+    <!-- <link rel="stylesheet" href="./pages/index.css" /> -->
     <title>Место</title>
   </head>
   <body class="page">
     <div class="page__container">
       <header class="header">
-        <img src="./images/logo.svg" alt="логотип место." class="header__logo" />
+        <img src="<%=require('./images/logo.svg')%>" alt="логотип место." class="header__logo" />
       </header>
 
       <main class="main">
         <!-- Profile -->
         <section class="profile">
-          <img src="./images/custo.jpg" alt="аватар." class="profile__avatar" />
+          <img src="<%=require('./images/custo.jpg')%>" alt="аватар." class="profile__avatar" />
           <div class="profile__info">
             <div class="profile__info-items">
               <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -138,6 +138,6 @@
       </li>
     </template>
 
-    <script type="module" src="./scripts/index.js"></script>
+    <!-- <script type="module" src="./scripts/index.js"></script> -->
   </body>
 </html>
