--- a/src/index.html
+++ b/src/index.html
@@ -52,28 +52,28 @@
               <input
                 type="text"
                 class="popup__input popup__input_type_name"
-                name="popup__name"
+                name="name"
                 value=""
                 placeholder="Имя"
                 minlength="2"
                 maxlength="40"
                 required
               />
-              <span class="popup__input-error popup__name-error"></span>
+              <span class="popup__input-error name-error"></span>
             </label>
 
             <label class="popup__label-input">
               <input
                 type="text"
                 class="popup__input popup__input_type_job"
-                name="popup__job"
+                name="job"
                 value=""
                 placeholder="Профессия"
                 minlength="2"
                 maxlength="200"
                 required
               />
-              <span class="popup__input-error popup__job-error"></span>
+              <span class="popup__input-error job-error"></span>
             </label>
             <button class="popup__submit" type="submit">Сохранить</button>
           </fieldset>
@@ -93,26 +93,26 @@
               <input
                 type="text"
                 class="popup__input popup__input_type_title"
-                name="add-title"
+                name="name"
                 value=""
                 placeholder="Название"
                 minlength="2"
                 maxlength="30"
                 required
               />
-              <span class="popup__input-error add-title-error"></span>
+              <span class="popup__input-error name-error"></span>
             </label>
 
             <label class="popup__label-input">
               <input
                 type="url"
                 class="popup__input popup__input_type_link"
-                name="add-link"
+                name="link"
                 value=""
                 placeholder="Ссылка на картинку"
                 required
               />
-              <span class="popup__input-error add-link-error"></span>
+              <span class="popup__input-error link-error"></span>
             </label>
             <button class="popup__submit" type="submit">Создать</button>
           </fieldset>
